# csharp_Repomap_for_Agent

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
csharp_repomap/: __init__.py  __main__.py  cli.py  generator.py  notifier.py  parser.py  ranker.py
csharp_repomap/resources/: notify.ps1
csharp_repomap/templates/: config.generic.yaml  config.unity.yaml
csharp_repomap/templates/hooks/: post-checkout  post-merge
