[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csharp-repomap"
version = "0.1.0"
description = "Generate layered code maps for C# projects, optimized for AI assistants like Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Yoji", email = "yoji@example.com"}
]
keywords = ["csharp", "unity", "code-analysis", "repomap", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "tree-sitter>=0.20.0",
    "tree-sitter-c-sharp>=0.20.0",
    "networkx>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
tiktoken = [
    "tiktoken>=0.5.0",
]

[project.scripts]
repomap = "csharp_repomap.cli:main"

[project.urls]
Homepage = "https://github.com/user/csharp-repomap"
Repository = "https://github.com/user/csharp-repomap"
Issues = "https://github.com/user/csharp-repomap/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["csharp_repomap*"]

[tool.setuptools.package-data]
csharp_repomap = [
    "templates/*.yaml",
    "templates/hooks/*",
    "resources/*.ps1",
]
